Add a resource paragraph

--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
           </ul>
         </div>
       </div>
+    <p>Open-source code, coded by Solomiia Yaremenko</p>
     </section>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
